--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.11",
     "db-migrate-mysql": "^2.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
+    "flash": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mustache-express": "^1.3.0",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
     "serve-favicon": "^2.5.0",
     "slug": "^3.5.1"
